# geeksforgeeks-exercises

./: .gitignore  OOP Inheritance Exercises.ipynb  OS_module.ipynb  README.md  Untitled.ipynb  check_two_list_have_one_elem.ipynb  conditional_statement_exercises.ipynb  desktop.ini  exercises.ipynb  file.txt  file1.txt  file3.html  file_handling.ipynb  ibm_image_descr_ai.ipynb  polymorphism.ipynb  program to find common element.ipynb  pyproject.toml  python_list_exercise.ipynb
docs/: design.md
output_directory/: scraped_data_table_1.json  scraped_data_table_10.json  scraped_data_table_11.json  scraped_data_table_12.json  scraped_data_table_13.json  scraped_data_table_14.json  scraped_data_table_15.json  scraped_data_table_16.json  scraped_data_table_17.json  scraped_data_table_18.json  scraped_data_table_19.json  scraped_data_table_2.json  scraped_data_table_20.json  scraped_data_table_21.json  scraped_data_table_22.json  scraped_data_table_23.json  scraped_data_table_24.json  scraped_data_table_25.json  scraped_data_table_3.json  scraped_data_table_4.json  scraped_data_table_5.json  scraped_data_table_6.json  scraped_data_table_7.json  scraped_data_table_8.json  scraped_data_table_9.json
src/: acquire.py  html_extract.py  kaggle_client.py  web_scraper.py
tests/features/: kaggle_api.feature  scrape.feature
tests/steps/: kaggle_steps.py  scrape_steps.py
tests/unit/: test_html_extract.py  test_kaggle_client.py  test_web_scraper.py
