[tool.poetry]
name = "data-acquisition"
version = "0.1.0"
description = "A project for acquiring data from various sources"
authors = ["Abbey-commit "]

[tool.poetry.dependencies]
python = "^3.12.7"
requests = "^2.28.1"
beautifulsoup4 = "^4.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
acquire = "src.acquire:main"

[[tool.poetry.packages]]
include = "src"